--- a/SavingsGoalManager/pom.xml
+++ b/SavingsGoalManager/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.brenner</groupId>
-	<artifactId>BudgetManager2</artifactId>
+	<artifactId>SavingsGoals</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
-	<name>BudgetManager2</name>
+	<name>Savings Goals</name>
 	<description>Savings Goals Manager</description>
 	<properties>
 		<java.version>17</java.version>
