Expanding API capability

--- a/SavingsGoalManager/src/main/resources/application.properties
+++ b/SavingsGoalManager/src/main/resources/application.properties
@@ -5,7 +5,10 @@ server.error.include-stacktrace=always
 #spring.web.resources.chain.strategy.content.enabled=true
 #spring.web.resources.chain.strategy.content.paths=/**
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManager
+#production
+#spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManager
+#dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManagerDev
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto = update
