updated with profiles

--- a/SavingsGoalManager/pom.xml
+++ b/SavingsGoalManager/pom.xml
@@ -18,6 +18,23 @@
 		<java.version>17</java.version>
         <start-class>com.brenner.budgetmanager.SavingsGoalsApplication</start-class>
 	</properties>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring.profiles.active>dev</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<spring.profiles.active>prod</spring.profiles.active>
+			</properties>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,6 +96,12 @@
 
 	<build>
 	   <finalName>savingsgoalsmanager</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
