--- a/SavingsGoalManager/src/main/resources/application-dev.properties
+++ b/SavingsGoalManager/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-stacktrace=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManager
+spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManagerDev
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto = update
@@ -21,7 +21,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
 spring.jpa.properties.hibernate.type=ERROR 
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.security=ERROR
- 
+
 logging.level.com.brenner=DEBUG
 
 spring.thymeleaf.cache=false
@@ -30,3 +30,5 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
+
+server.port=9001
