Added a property loader that allows for externalizing credentials

--- a/SavingsGoalManager/src/main/resources/application.properties
+++ b/SavingsGoalManager/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.error.include-stacktrace=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManager
 spring.datasource.username=postgres
-spring.datasource.password=password
+# The database password is loaded from an external file. The path is defined in com.brenner.budgetmanager.PropertyLoader
+spring.datasource.password=${budgetmanager.datasource.password}
 spring.jpa.hibernate.ddl-auto = update
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
