--- a/SavingsGoalManager/src/main/resources/application-dev.properties
+++ b/SavingsGoalManager/src/main/resources/application-dev.properties
@@ -2,9 +2,11 @@ server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-stacktrace=always
 
+property.secrets=${HOME}/development/secrets/secrets.properties
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/BudgetManagerDev
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=${budgetmanager.datasource.password}
 spring.jpa.hibernate.ddl-auto = update
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
